--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,10 +7,39 @@
 }
 
 /**
+ *single product page - product name
+ */
+ .name {
+     background: cccccc;
+     color: black;
+     font-weight: bold;
+ }
+
+/**
  *product image on card
  */
 .product-img{
     min-height: 100px;
+}
+
+/*black shades from 10-1*/
+.black-10 {
+    background: #f2f2f2;
+}
+.black-9 {
+    background: #e6e6e6;
+}
+.black-8 {
+    background: #d9d9d9;
+}
+.black-7 {
+    background: #cccccc;
+}
+.black-6 {
+    background: #bfbfbf;
+}
+.black-5 {
+    background: #b3b3b3;
 }
 
 .jumbotron h2 {
