--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -6,6 +6,16 @@
     border-radius: 0px;
 }
 
+/*Cart-badge*/
+
+.cart-badge, .cart-badge:hover {
+    border-radius: 50%;
+    padding: 2px;
+    font-size: 12px;
+    font-style: italic;
+    background: black;
+}
+
 /**
  *single product page - product name
  */
